--- a/util/wrtctld-wrapper.sh.in
+++ b/util/wrtctld-wrapper.sh.in
@@ -31,7 +31,10 @@ create_conf_file
 args=""
 initial=""
 [ @STUNNEL@ -eq 1 ] && args="-k ${key_path}"
-[ -n "${VALGRIND}" ] && initial="valgrind --leak-check=full"
+if [ -n "${VALGRIND}" ]; then
+    initial="valgrind --leak-check=full"
+    export WRTCTL_NO_DLCLOSE=1
+fi
 [ -n "${GDB}" ] && initial="gdb --args"
 
 @TOP_BUILDDIR@/src/bin/wrtctld -h &>/dev/null
