--- a/test/test.sh.in
+++ b/test/test.sh.in
@@ -174,6 +174,7 @@ sys_tests=(
     "run"   1   "1, access:  No such file or directory"     "sys:initd nofile start"
     "run"   1   "1, access:  No such file or directory"     "sys:initd /this/bad/path start"
     "run"   0   "127.0.0.0:127.0.0.1:lo"                    "sys:route_info"
+    "run"   0   "lo:127.0.0.1"                              "sys:ip_info"
 )
 
 sys_noexe_tests=(
